# VLM4VLA

./: .gitignore  AGENTS.md  README.md  install.sh  main.py  pyproject.toml  transform_ckpt.py  transform_ckpt.sh
configs/: fsdp_config.yaml
configs/calvin_finetune/: finetune_internvl35-4b_calvin.json  finetune_kosmos_calvin.json  finetune_paligemma-3b_calvin.json  finetune_paligemma2-3b_calvin.json  finetune_pi0_paligemma-3b_calvin.json  finetune_qwen25vl-3b_calvin.json  finetune_qwen25vl-7b_calvin.json  finetune_qwen3vl-2b_calvin.json  finetune_qwen3vl-30a3_calvin.json  finetune_qwen3vl-4b_calvin.json  finetune_qwen3vl-4b_calvin_flowmatching.json  finetune_qwen3vl-8b_calvin.json
configs/multinode_example/: finetune_qwen3vl-30a3_calvin_ds.json  finetune_qwen3vl-30a3_calvin_fsdp.json  finetune_qwen3vl-8b_calvin_ds.json  finetune_qwen3vl-8b_calvin_fsdp.json
configs/oxe_training/: pi0_paligemma_bridge.yaml
configs/realdualarm_training/: finetune_qwen3vl-4b_x2w_0928.json
eval/calvin/: distributed_utils.py  env_test.py  eval_ckpts.py  eval_ckpts_30a3.py  eval_utils.py  evaluate_ddp-30a3.py  evaluate_ddp.py  model_wrapper.py
eval/libero/: env_test.py  eval_ckpts_libero.py  (+5 more)
openvla/: pyproject.toml
scripts/: bridge.bash  bridge_30a3.bash  calvin_ddp.sh  calvin_ddp_30a3.sh  ckpt_convert_sidecar.sh  convert_ckpt_standalone.py  download_assets.sh  launch_run.sh  launch_run_a.sh  launch_run_b.sh  libero.sh  libero_30a3.sh  local_smoke.sh  queue_run_b.sh  run.sh  run_debug.sh  run_multinodes.sh  setup_env.sh
tools/: convert_deepspeed_to_fp32.py  modeling_kosmos2.py
(+109 files in other folders)
